delete function added

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.15",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.4",
     "cookie-parser": "^1.4.6",
     "firebase": "^10.9.0",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-google-button": "^0.8.0",
     "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
+    "sweetalert2": "^11.12.3",
     "universal-cookie": "^7.1.0"
   },
   "devDependencies": {
